Added bold and Underline

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
    	<h1>Website about Coconuts</h1>
-   	<p>Coconuts are amazing.</p>
+  <p><b>Coconuts</b> are <u>amazing</u>.</p>
 
 
  </body>
