--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <body>
+ <body bgcolor="A6E6FA">
    	<h1>Website about Coconuts</h1>
   <p><b>Coconuts</b> are <u>amazing</u> .</p>
 <p><font color="blue"> COCONUTS!!! </font> </p>
